[project]
name = "py-pip"
version = "2023.0.0"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.8"
dependencies = ["httpx", "microvenv", "rich", "structlog", "trio"]

[project.optional-dependencies]

test = ["pytest"]

[tool.pip-tools]
pip-args = "--only-binary :all:"
generate-hashes = true
resolver = "backtracking"
output-file = "requirements.txt"

[tool.ruff.isort]
extra-standard-library = ["tomllib"]
